crates/pixi_build_type_conversions/src/snapshots/pixi_build_type_conversions__project_model__tests__conversions_v1_docs@dev.snap
---
source: crates/pixi_build_type_conversions/src/project_model.rs
assertion_line: 307
expression: project_model
---
{
  "name": null,
  "buildStringPrefix": null,
  "buildNumber": null,
  "version": null,
  "description": null,
  "authors": null,
  "license": null,
  "licenseFile": null,
  "readme": null,
  "homepage": null,
  "repository": null,
  "documentation": null,
  "targets": {
    "defaultTarget": {
      "hostDependencies": {
        "python": {
          "binary": {
            "version": "*",
            "build": null,
            "buildNumber": null,
            "fileName": null,
            "channel": null,
            "subdir": null,
            "md5": null,
            "sha256": null,
            "url": null,
            "license": null,
            "condition": null,
            "licenseFamily": null,
            "extras": null,
            "flags": null,
            "trackFeatures": null
          }
        }
      },
      "buildDependencies": {
        "cmake": {
          "binary": {
            "version": "*",
            "build": null,
            "buildNumber": null,
            "fileName": null,
            "channel": null,
            "subdir": null,
            "md5": null,
            "sha256": null,
            "url": null,
            "license": null,
            "condition": null,
            "licenseFamily": null,
            "extras": null,
            "flags": null,
            "trackFeatures": null
          }
        }
      },
      "runDependencies": {
        "bat": {
          "binary": {
            "version": "*",
            "build": null,
            "buildNumber": null,
            "fileName": null,
            "channel": null,
            "subdir": null,
            "md5": null,
            "sha256": null,
            "url": null,
            "license": null,
            "condition": null,
            "licenseFamily": null,
            "extras": null,
            "flags": null,
            "trackFeatures": null
          }
        }
      },
      "runConstraints": {}
    },
    "targets": {}
  }
}
