crates/pixi_build_type_conversions/src/snapshots/pixi_build_type_conversions__project_model__tests__conversions_v1_docs@getting_started.snap
---
source: crates/pixi_build_type_conversions/src/project_model.rs
assertion_line: 307
expression: project_model
---
{
  "name": "python_rich",
  "buildStringPrefix": null,
  "buildNumber": null,
  "version": "0.1.0",
  "description": null,
  "authors": null,
  "license": null,
  "licenseFile": null,
  "readme": null,
  "homepage": null,
  "repository": null,
  "documentation": null,
  "targets": {
    "defaultTarget": {
      "hostDependencies": {
        "hatchling": {
          "binary": {
            "version": "*",
            "build": null,
            "buildNumber": null,
            "fileName": null,
            "channel": null,
            "subdir": null,
            "md5": null,
            "sha256": null,
            "url": null,
            "license": null,
            "condition": null,
            "licenseFamily": null,
            "extras": null,
            "flags": null,
            "trackFeatures": null
          }
        }
      },
      "buildDependencies": {},
      "runDependencies": {
        "rich": {
          "binary": {
            "version": "13.9.*",
            "build": null,
            "buildNumber": null,
            "fileName": null,
            "channel": null,
            "subdir": null,
            "md5": null,
            "sha256": null,
            "url": null,
            "license": null,
            "condition": null,
            "licenseFamily": null,
            "extras": null,
            "flags": null,
            "trackFeatures": null
          }
        }
      },
      "runConstraints": {}
    },
    "targets": {}
  }
}
