crates/pixi_build_type_conversions/src/snapshots/pixi_build_type_conversions__project_model__tests__conversions_v1_docs@workspace_variants.snap
---
source: crates/pixi_build_type_conversions/src/project_model.rs
assertion_line: 307
expression: project_model
---
{
  "name": "python_rich",
  "buildStringPrefix": null,
  "buildNumber": null,
  "version": "0.1.0",
  "description": null,
  "authors": null,
  "license": null,
  "licenseFile": null,
  "readme": null,
  "homepage": null,
  "repository": null,
  "documentation": null,
  "targets": {
    "defaultTarget": {
      "hostDependencies": {
        "hatchling": {
          "binary": {
            "version": "==1.26.3",
            "build": null,
            "buildNumber": null,
            "fileName": null,
            "channel": null,
            "subdir": null,
            "md5": null,
            "sha256": null,
            "url": null,
            "license": null,
            "condition": null,
            "licenseFamily": null,
            "extras": null,
            "flags": null,
            "trackFeatures": null
          }
        },
        "python": {
          "binary": {
            "version": "*",
            "build": null,
            "buildNumber": null,
            "fileName": null,
            "channel": null,
            "subdir": null,
            "md5": null,
            "sha256": null,
            "url": null,
            "license": null,
            "condition": null,
            "licenseFamily": null,
            "extras": null,
            "flags": null,
            "trackFeatures": null
          }
        }
      },
      "buildDependencies": {},
      "runDependencies": {
        "cpp_math": {
          "source": {
            "path": {
              "path": "packages/cpp_math"
            },
            "version": null,
            "build": null,
            "buildNumber": null,
            "subdir": null,
            "license": null,
            "licenseFamily": null,
            "extras": null,
            "flags": null,
            "trackFeatures": null,
            "condition": null
          }
        },
        "rich": {
          "binary": {
            "version": ">=13.9.4,<14",
            "build": null,
            "buildNumber": null,
            "fileName": null,
            "channel": null,
            "subdir": null,
            "md5": null,
            "sha256": null,
            "url": null,
            "license": null,
            "condition": null,
            "licenseFamily": null,
            "extras": null,
            "flags": null,
            "trackFeatures": null
          }
        }
      },
      "runConstraints": {}
    },
    "targets": {}
  }
}
